more weird spacing issues, added hue state / prop to pass to hue color stip component that can be changed on click (forthcoming)

--- a/src/components/ColorPicker/components/styles.scss
+++ b/src/components/ColorPicker/components/styles.scss
@@ -2,3 +2,8 @@
     width: 100px;
     height: 300px;
 }
+
+.sLStrip {
+    width: 300px;
+    height: 300px;
+}
